# maw

./: .botbox.json  .botbox.toml  .edict.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  TUI_SPEC.md  synth_handlers.rs
.agents/: .gitignore
.beads/: issues.jsonl
.claude/: settings.json
.crit/: events.jsonl  orphaned-reviews-20260204-053830.json
benches/: workspace_backends.rs
crates/maw-assurance/: Cargo.toml
crates/maw-assurance/src/: fault.rs  in_proc.rs  lib.rs  model.rs  oracle.rs  oracle_a.rs  oracle_b.rs  oracle_escape.rs  scenario.rs  shrinker.rs  shrinker_tests.rs  trace.rs
crates/maw-assurance/tests/: formal_model.rs  sg1_corpus_emit.rs  sg1_dst.rs
crates/maw-bench/: Cargo.toml
crates/maw-bench-adapters/: Cargo.toml
crates/maw-bench-adapters/src/: consolidated_layout_adapter.rs  jj_adapter.rs  lib.rs  maw_adapter.rs  worktrees_adapter.rs  ws_layout_adapter.rs
crates/maw-bench-adapters/src/shim/: git-shim  jj-shim  mod.rs
crates/maw-bench-adapters/tests/: chaos_smoke.rs  equivalence.rs  jj_opfork_wedge.rs  path_shim_smoke.rs
crates/maw-bench-metrics/: Cargo.toml
crates/maw-bench-metrics/src/: attribution.rs  extract.rs  friction_delta.rs  friction_list.rs  lib.rs  record.rs  report.rs
crates/maw-bench-metrics/tests/: no_composite.rs
crates/maw-bench-sweep/: Cargo.toml
crates/maw-bench-sweep/src/: aggregate.rs  crossover.rs  driver.rs  grid.rs  lib.rs  preflight.rs  real_runtime.rs  render.rs  sg3_decision.rs
crates/maw-bench-sweep/src/cribs/: jj_workspaces.md  maw_consolidated_layout.md  maw_ws_layout.md  worktrees_convention.md
crates/maw-bench-sweep/tests/: crossover.rs  no_composite.rs  sg3_layout_eval_pilot.rs  sweep_pilot.rs  v1_v2_mix.rs  wilson_ci.rs
crates/maw-bench/src/: agent.rs  claude.rs  harness.rs  lib.rs  prompt.rs  run.rs  substrate.rs  version_capture.rs
crates/maw-bench/tests/: claude_backend_smoke.rs
crates/maw-cli/: Cargo.toml
crates/maw-cli/src/: agents.rs  audit.rs  crib.rs  dev.rs  doctor.rs  epoch.rs  epoch_gc.rs  epoch_lock.rs  error.rs  exec.rs  format.rs  init.rs  lfs_push.rs  lib.rs  main.rs  merge_cmd.rs  migrate.rs  ops_log.rs  push.rs  ref_gc.rs  release.rs  release_prepare.rs  status.rs  telemetry.rs  tldr.rs  transport.rs  undo.rs  upgrade.rs  v2_init.rs  vocab_hints.rs
crates/maw-cli/src/changes/: mod.rs  store.rs
crates/maw-cli/src/fsck/: invariants.rs  mod.rs
crates/maw-cli/src/migrate/: journal.rs
crates/maw-cli/src/tui/: app.rs  event.rs  mod.rs
crates/maw-cli/src/workspace/: advance.rs  annotate.rs  capture.rs  clean.rs  clean_build.rs  conflict_state.rs  create.rs  create_lock.rs  describe.rs  destroy_guidance.rs  destroy_preview.rs  destroy_record.rs  diff.rs  epoch_drift.rs  ff_absorb.rs  history.rs  invariant_audit.rs  lifecycle.rs  list.rs  merge.rs  metadata.rs  mod.rs  names.rs  oplog_runtime.rs  overlap.rs  post_sync_hook.rs  prune.rs  recover.rs  resolve.rs  resolve_structured.rs  restore.rs  status.rs  sync.rs  templates.rs  touched.rs  undo.rs  working_copy.rs
crates/maw-cli/src/workspace/sync/: auto_rebase.rs  checks.rs  cross_target.rs  lock.rs  mod.rs  notice.rs  rebase.rs  sanity.rs
crates/maw-cli/tests/: epoch_lock_cli.rs  undo_cli.rs
crates/maw-core/: Cargo.toml
crates/maw-core/maw-core/: Cargo.toml
crates/maw-core/maw-core/src/model/: conflict.rs  file_id.rs  join.rs
crates/maw-core/src/: config.rs  failpoints.rs  lib.rs  merge_state.rs  refs.rs
crates/maw-core/src/backend/: copy.rs  git.rs  mod.rs  overlay.rs  platform.rs  reflink.rs
crates/maw-core/src/merge/: apply.rs  build.rs  diff_extract.rs  materialize.rs  mod.rs  partition.rs  plan.rs  rename.rs  types.rs
crates/maw-core/src/model/: conflict.rs  diff.rs  file_id.rs  join.rs  layout.rs  ordering.rs  patch.rs  types.rs
crates/maw-core/src/oplog/: checkpoint.rs  global_view.rs  mod.rs  read.rs  types.rs  view.rs  write.rs
crates/maw-core/tests/: workspace_id_proptest.rs
crates/maw-git/: Cargo.toml
crates/maw-git/src/: checkout_impl.rs  config_impl.rs  diff_impl.rs  error.rs  gix_repo.rs  index_impl.rs  init_impl.rs  lfs_clean.rs  lib.rs  merge.rs  objects_impl.rs  push_impl.rs  refs_impl.rs  repo.rs  rev_walk_impl.rs  stash_impl.rs  status_impl.rs  test_support.rs  types.rs  worktree_impl.rs
crates/maw-git/tests/: integration_test.rs
crates/maw-lfs/: Cargo.toml
crates/maw-lfs/src/: attrs.rs  batch.rs  creds.rs  error.rs  lib.rs  pointer.rs  store.rs
crates/maw-lfs/tests/: attrs_proptest.proptest-regressions  attrs_proptest.rs  conformance.rs  no_subprocess.rs
crates/maw-scenario/: Cargo.toml
crates/maw-scenario/src/: lib.rs
crates/maw-tui/: Cargo.toml
crates/maw-tui/src/: app.rs  event.rs  lib.rs  ui.rs
docs/: agent-a.md  agent-b.md  git-subprocess-inventory.md  workspace-templates.md
notes/: adr-dst-execution-model.md  agent-benchmark-feasibility.md  assurance-near-proof-proposal.md  assurance-near-proof-proposal.review.1.md  assurance-near-proof-proposal.review.2.patch  assurance-plan.md  bare-repo-architecture-v2.md  bn-2ksp-repro.sh  bn-3bkn-repro.sh  bn-3bkn-rootcause.md  botbus-session-2026-02-04  cached-fields-audit.md  consolidated-sim.sh  eval-deep-audit-findings.md  eval-deep-audit-fixes.md  eval-framework.md  eval-harness.sh  eval-report-post-merge-push-branch.md  eval-report-v2-bare-model.md  ideas.md  incident-lost-commits-2026-02-05.md  layout-engine-impact.md  manifold-v2-patches.txt  manifold-v2.md  oracle-ab-spec.md  plan-gix-migration-and-crate-split.md  sg1-dst-architecture.md  sg1-fault-injection-notes.md  sg1-race-feasibility-spike-bn-3ny7.md  sg1-soak-campaign.md  sg2-adapter-parity.md  sg2-benchmark-preregistration.md  sg2-benchmark-preregistration.review.1.md  sg2-benchmark-preregistration.review.2.md  sg2-friction-list-handoff.md  sg2-friction-list.md  sg2-metric-definitions.md  (+18 more)
spike/: Cargo.toml  README.md  cost_scaling.py  drive_agent.sh  metrics.md  oracle_ab_harness.py  results.json  run-lifecycle.sh
spike/arms/: README.md
spike/scenario/: seed.sh
spike/src/: inproc.rs  subprocess.rs
src/: epoch.rs  (+24 more)
(+1135 files in other folders)
