[package]
name = "maw"
version = "0.27.2"
edition = "2024"
description = "Multi-Agent Workflow coordinator for jj workspaces"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toon-format = "0.4"
glob = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
