[package]
name = "maw"
version = "0.46.7"
edition = "2024"
description = "Multi-Agent Workflow coordinator for Manifold git workspaces"
license = "MIT"

[features]
default = ["ast-merge"]
ast-merge = [
  "dep:tree-sitter",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-python",
  "dep:tree-sitter-typescript",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-go",
]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
tempfile = "3"

# AST-aware merge (optional, enabled by default)
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "workspace_backends"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
