[package]
name = "maw"
version = "0.49.0"
edition = "2024"
description = "Multi-Agent Workflow coordinator for Manifold git workspaces"
license = "MIT"

[features]
default = ["ast-merge", "otel"]
ast-merge = [
  "dep:tree-sitter",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-python",
  "dep:tree-sitter-typescript",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-go",
]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-appender-tracing",
  "dep:tracing-opentelemetry",
]
failpoints = []
assurance = ["dep:stateright"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
anyhow = "1"
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
tempfile = "3"

# AST-aware merge (optional, enabled by default)
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
terseid = "0.1"

# Formal model checking (optional, enabled by assurance feature)
stateright = { version = "0.30", optional = true }

# Telemetry (tracing + optional OTLP export)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OTEL stack (optional, enabled by default)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["trace", "logs", "http-proto", "reqwest-blocking-client"] }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "workspace_backends"
harness = false

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
