[package]
name = "maw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic for maw — merge protocol, oplog, backend, refs"
keywords = ["git", "merge", "workspace", "oplog"]
categories = ["development-tools"]

[features]
default = []
failpoints = []

[dependencies]
anyhow = "1"
maw-git = { path = "../maw-git", version = "0.50.0" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
