[package]
name = "maw-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git abstraction layer for maw — trait-based interface backed by gix"
keywords = ["git", "gix", "abstraction", "repository"]
categories = ["development-tools"]

[dependencies]
thiserror = "2"
gix = { version = "0.72", default-features = false, features = [
    "basic",
    "worktree-mutation",
    "index",
    "worktree-stream",
    "revision",
    "status",
    "dirwalk",
    "tree-editor",
    "merge",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
