[package]
name = "maw-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git abstraction layer for maw — trait-based interface backed by gix"
keywords = ["git", "gix", "abstraction", "repository"]
categories = ["development-tools"]

[features]
default = ["lfs"]
lfs = ["dep:maw-lfs"]

[dependencies]
thiserror = "2"
tracing = "0.1"
gix = { version = "0.72", default-features = false, features = [
    "basic",
    "worktree-mutation",
    "index",
    "worktree-stream",
    "revision",
    "status",
    "dirwalk",
    "tree-editor",
    "merge",
] }
maw-lfs = { path = "../maw-lfs", version = "0.59.3", optional = true }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
filetime = "0.2"

[lints]
workspace = true
