[package]
name = "maw-lfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native git-lfs support for maw — pointer codec, local object store, batch API client"
keywords = ["git", "lfs", "gix", "maw"]
categories = ["development-tools"]

[dependencies]
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
gix = { version = "0.72", default-features = false, features = [
    "basic",
    "attributes",
    "credentials",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }

[dev-dependencies]
tempfile = "3"
maw-git = { path = "../maw-git", default-features = false, features = ["lfs"] }
proptest = "1"

[lints]
workspace = true
