[package]
name = "maw-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Driver-agnostic scenario plan generator for maw — shared by SG1 DST (in-process oracles) and SG2 (real-agent benchmark)."
keywords = ["maw", "dst", "scenario", "deterministic", "benchmark"]
categories = ["development-tools::testing", "simulation"]

# Why this crate exists
# --------------------------------------------------------------------------
# T1.2 (bn-1f53) shipped a deterministic scenario + condition generator
# whose entire purpose is "build once, drive two ways"
# (notes/sg1-dst-architecture.md §2): the same `ScenarioPlan` must be
# consumed by BOTH the cheap in-proc/oracle driver (SG1) AND the expensive
# real-agent driver (SG2, T2.2 bn-1sqo + T2.3 bn-mit2).
#
# T2.1 (bn-4qwp) factors that generator out of `maw-assurance` so the SG2
# driver does NOT have to pull in maw-assurance's heavyweight feature
# surface (oracles, in_proc, shrinker, fault layer, maw-core, failpoints,
# tempfile). This crate is intentionally tiny — just `rand` + `serde` —
# so the SG2 build stays clean.
#
# `maw-assurance::scenario` is now a re-export of this crate (gated behind
# the `scenario` feature, preserving the SG1 import path).

[dependencies]
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
