[package]
name = "maw-tui"
version = "0.49.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
