[package]
name = "maw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for maw workspace status dashboard"
keywords = ["tui", "ratatui", "terminal", "dashboard"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
